mapping out gameboard and js functions

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
+                <td class="black-cell"></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -118,7 +118,6 @@
                 <td></td>
                 <td></td>
             </tr>
-
         </table>
         
 
