bug fix to cells

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <table id="gameboard">
             <tr id="y1">
-                <td id="x1y1" class="blank-cell" contenteditable="false">1</td>                
+                <td id="x1y1" class="blank-cell" contenteditable="false"></td>                
                 <td id="x2y1" class="blank-cell" contenteditable="false"></td>
                 <td id="x3y1" contenteditable="true"></td>
                 <td id="x4y1" contenteditable="true"></td>
@@ -28,7 +28,7 @@
                 <td id="x12y1" contenteditable="true"></td>
                 <td id="x13y1" class="blank-cell" contenteditable="false"></td>
                 <td id="x14y1" class="blank-cell" contenteditable="false"></td>
-                <td id="x15y1" cclass="blank-cell" contenteditable="false"></td>
+                <td id="x15y1" class="blank-cell" contenteditable="false"></td>
                 <td id="x16y1" class="blank-cell" contenteditable="false"></td>
                 <td id="x17y1" class="blank-cell" contenteditable="false"></td>
             </tr>
@@ -83,14 +83,14 @@
                 <td id="x7y4" contenteditable="true"></td>
                 <td id="x8y4" contenteditable="true"></td>
                 <td id="x9y4" class="blank-cell" contenteditable="false"></td>
-                <td id="x10y4" lass="blank-cell" contenteditable="false"></td>
-                <td id="x11y4" lass="blank-cell" contenteditable="false"></td>
-                <td id="x12y4" lass="blank-cell" contenteditable="false"></td>
-                <td id="x13y4" lass="blank-cell" contenteditable="false"></td>
-                <td id="x14y4" lass="blank-cell" contenteditable="false"></td>
-                <td id="x15y4" lass="blank-cell" contenteditable="false"></td>
-                <td id="x16y4" lass="blank-cell" contenteditable="false"></td>
-                <td id="x17y4" lass="blank-cell" contenteditable="false"></td>
+                <td id="x10y4"class="blank-cell" contenteditable="false"></td>
+                <td id="x11y4"class="blank-cell" contenteditable="false"></td>
+                <td id="x12y4"class="blank-cell" contenteditable="false"></td>
+                <td id="x13y4"class="blank-cell" contenteditable="false"></td>
+                <td id="x14y4"class="blank-cell" contenteditable="false"></td>
+                <td id="x15y4"class="blank-cell" contenteditable="false"></td>
+                <td id="x16y4"class="blank-cell" contenteditable="false"></td>
+                <td id="x17y4"class="blank-cell" contenteditable="false"></td>
             </tr>
 
             <tr id="y5">
@@ -125,12 +125,12 @@
                 <td id="x9y6" class="blank-cell" contenteditable="false"></td>
                 <td id="x10y6"class="blank-cell" contenteditable="false"></td>
                 <td id="x11y6" contenteditable="true"></td>
-                <td id="x12y6"class="blank-cell" contenteditable="false"></td>
-                <td id="x13y6"class="blank-cell" contenteditable="false"></td>
-                <td id="x14y6"class="blank-cell" contenteditable="false"></td>
-                <td id="x15y6"class="blank-cell" contenteditable="false"></td>
-                <td id="x16y6"class="blank-cell" contenteditable="false"></td>
-                <td id="x17y6"class="blank-cell" contenteditable="false"></td>
+                <td id="x12y6" class="blank-cell" contenteditable="false"></td>
+                <td id="x13y6" class="blank-cell" contenteditable="false"></td>
+                <td id="x14y6" class="blank-cell" contenteditable="false"></td>
+                <td id="x15y6" class="blank-cell" contenteditable="false"></td>
+                <td id="x16y6" class="blank-cell" contenteditable="false"></td>
+                <td id="x17y6" class="blank-cell" contenteditable="false"></td>
             </tr>
 
             <tr id="y7">
@@ -349,18 +349,32 @@
                 <td id="x14y17" class="blank-cell" contenteditable="false"></td>
                 <td id="x15y17" class="blank-cell" contenteditable="false"></td>
                 <td id="x16y17" class="blank-cell" contenteditable="false"></td>
-                <td id="x17y17" contenteditable="true">N</td>
+                <td id="x17y17" contenteditable="true"></td>
             </tr>
 
         </table>
         
     <div id="acrosswords">
-        <h3></h3>
+        <h3>Across</h3>
+      
+      1. Robert De Niro stars in this Martin Scorsese classic.<br>
+      2. Classic film starring Tim Robbins and Morgan Freeman.<br>
+      3. Classic Al Pacino film about a Cuban immigrant.<br>
+      4. Francis Ford Coppola's epic crime drama.<br>
+      5. Quentin Tarantino's two-part crime film.<br>
+      6. David Fincher's thriller about a newspaper investigation.<br>
+      7. Classic romance set in a Moroccan city during World War II.<br>
+      8. CLUE FOR DONNIE BRASCO HERE<br>
     </div>
 
     <div id="downwords">
-        <h3></h3>
+        <h3>Down</h3>
+        9. Crime film about an underground fight club.<br>
+        10. Tarantino's debut heist film involving color-coded criminals.<br>
+        11. Gangster film featuring Joe Pesci.<br>
+        12. Quentin Tarantino's heist film set in Los Angeles.<br>
     </div>
+
     <button id="clearButton">Clear Board</button>
 </body>
 </html>
