--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crossword Puzzle</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/main.js"></script>
 </head>
@@ -15,7 +18,6 @@
     <div class="columns">
         <div id="acrosswords">
             <h3>Across</h3>
-          
           1. Robert De Niro stars in this Martin Scorsese classic.<br>
           2. Classic film starring Tim Robbins and Morgan Freeman.<br>
           3. Classic Al Pacino film about a Cuban immigrant.<br>
@@ -30,7 +32,7 @@
             <tr id="y1">
                 <td id="x1y1" class="blank-cell" contenteditable="false"></td>                
                 <td id="x2y1" class="blank-cell" contenteditable="false"></td>
-                <td id="x3y1" contenteditable="true"></td>
+                <td id="x3y1" contenteditable="true">1</td>
                 <td id="x4y1" contenteditable="true"></td>
                 <td id="x5y1" contenteditable="true"></td>
                 <td id="x6y1" contenteditable="true"></td>
