--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             <tr id="y1">
                 <td id="x1y1" class="blank-cell" contenteditable="false"></td>                
                 <td id="x2y1" class="blank-cell" contenteditable="false"></td>
-                <td id="x3y1" contenteditable="true">1</td>
+                <td id="x3y1" contenteditable="true" placeholder="1"></td>
                 <td id="x4y1" contenteditable="true"></td>
                 <td id="x5y1" contenteditable="true"></td>
                 <td id="x6y1" contenteditable="true"></td>
                 <td id="x7y1" contenteditable="true"></td>
-                <td id="x8y1" contenteditable="true"></td>
+                <td id="x8y1" contenteditable="true" placeholder="10"></td>
                 <td id="x9y1" contenteditable="true"></td>
                 <td id="x10y1" contenteditable="true"></td>
                 <td id="x11y1" contenteditable="true"></td>
@@ -77,7 +77,7 @@
                 <td id="x5y3" class="blank-cell" contenteditable="false"></td>
                 <td id="x6y3" class="blank-cell" contenteditable="false"></td>
                 <td id="x7y3" class="blank-cell" contenteditable="false"></td>
-                <td id="x8y3" contenteditable="true"></td>
+                <td id="x8y3" contenteditable="true" placeholder="2"></td>
                 <td id="x9y3" contenteditable="true"></td>
                 <td id="x10y3" contenteditable="true"></td>
                 <td id="x11y3" contenteditable="true"></td>
@@ -90,11 +90,11 @@
             </tr>
             
             <tr id="y4">
-                <td id="x1y4" contenteditable="true"></td>
+                <td id="x1y4" contenteditable="true" placeholder="3"></td>
                 <td id="x2y4" contenteditable="true"></td>
                 <td id="x3y4" contenteditable="true"></td>
                 <td id="x4y4" contenteditable="true"></td>
-                <td id="x5y4" contenteditable="true"></td>
+                <td id="x5y4" contenteditable="true" placeholder="9"></td>
                 <td id="x6y4" contenteditable="true"></td>
                 <td id="x7y4" contenteditable="true"></td>
                 <td id="x8y4" contenteditable="true"></td>
@@ -140,7 +140,7 @@
                 <td id="x8y6" contenteditable="true"></td>
                 <td id="x9y6" class="blank-cell" contenteditable="false"></td>
                 <td id="x10y6"class="blank-cell" contenteditable="false"></td>
-                <td id="x11y6" contenteditable="true"></td>
+                <td id="x11y6" contenteditable="true" placeholder="11"></td>
                 <td id="x12y6" class="blank-cell" contenteditable="false"></td>
                 <td id="x13y6" class="blank-cell" contenteditable="false"></td>
                 <td id="x14y6" class="blank-cell" contenteditable="false"></td>
@@ -156,7 +156,7 @@
                 <td id="x4y7" class="blank-cell" contenteditable="false"></td>
                 <td id="x5y7" contenteditable="true"></td>
                 <td id="x6y7" class="blank-cell" contenteditable="false"></td>
-                <td id="x7y7" contenteditable="true"></td>
+                <td id="x7y7" contenteditable="true" placeholder="4"></td>
                 <td id="x8y7" contenteditable="true"></td>
                 <td id="x9y7" contenteditable="true"></td>
                 <td id="x10y7" contenteditable="true"></td>
@@ -166,7 +166,7 @@
                 <td id="x14y7" contenteditable="true"></td>
                 <td id="x15y7" contenteditable="true"></td>
                 <td id="x16y7" class="blank-cell" contenteditable="false"></td>
-                <td id="x17y7" contenteditable="true"></td>
+                <td id="x17y7" contenteditable="true" placeholder="12"></td>
             </tr>
 
             <tr id="y8">
@@ -199,7 +199,7 @@
                 <td id="x7y9" class="blank-cell" contenteditable="false"></td>
                 <td id="x8y9" contenteditable="true"></td>
                 <td id="x9y9" class="blank-cell" contenteditable="false"></td>
-                <td id="x10y9" contenteditable="true"></td>
+                <td id="x10y9" contenteditable="true" placeholder="5"></td>
                 <td id="x11y9" contenteditable="true"></td>
                 <td id="x12y9" contenteditable="true"></td>
                 <td id="x13y9" contenteditable="true"></td>
@@ -238,7 +238,7 @@
                 <td id="x7y11" class="blank-cell" contenteditable="false"></td>
                 <td id="x8y11" contenteditable="true"></td>
                 <td id="x9y11" class="blank-cell" contenteditable="false"></td>
-                <td id="x10y11" contenteditable="true"></td>
+                <td id="x10y11" contenteditable="true" placeholder="6"></td>
                 <td id="x11y11" contenteditable="true"></td>
                 <td id="x12y11" contenteditable="true"></td>
                 <td id="x13y11" contenteditable="true"></td>
@@ -274,7 +274,7 @@
                 <td id="x3y14" class="blank-cell" contenteditable="false"></td>
                 <td id="x4y14" class="blank-cell" contenteditable="false"></td>
                 <td id="x5y14" class="blank-cell" contenteditable="false"></td>
-                <td id="x6y14" contenteditable="true"></td>
+                <td id="x6y14" contenteditable="true" placeholder="7"></td>
                 <td id="x7y14" contenteditable="true"></td>
                 <td id="x8y14" contenteditable="true"></td>
                 <td id="x9y14" contenteditable="true"></td>
@@ -340,7 +340,7 @@
                 <td id="x9y16" class="blank-cell" contenteditable="false"></td>
                 <td id="x10y5" class="blank-cell" contenteditable="false"></td>
                 <td id="x11y5" class="blank-cell" contenteditable="false"></td>
-                <td id="x12y5" contenteditable="true"></td>
+                <td id="x12y5" contenteditable="true" placeholder="8"></td>
                 <td id="x13y5" contenteditable="true"></td>
                 <td id="x14y5" contenteditable="true"></td>
                 <td id="x15y5" contenteditable="true"></td>
