fill board function and bug fix

--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Crossword Puzzle</h1>
+        <a href="index.html" id="titlelink"><h1>Crossword Puzzle</h1></a>
     </header>
 
     <div class="columns">
@@ -269,43 +269,43 @@
             </tr>
 
             <tr id="y13">
+                <td id="x1y13" class="blank-cell" contenteditable="false"></td>
+                <td id="x2y13" class="blank-cell" contenteditable="false"></td>
+                <td id="x3y13" class="blank-cell" contenteditable="false"></td>
+                <td id="x4y13" class="blank-cell" contenteditable="false"></td>
+                <td id="x5y13" class="blank-cell" contenteditable="false"></td>
+                <td id="x6y13" contenteditable="true" placeholder="7"></td>
+                <td id="x7y13" contenteditable="true"></td>
+                <td id="x8y13" contenteditable="true"></td>
+                <td id="x9y13" contenteditable="true"></td>
+                <td id="x10y13" contenteditable="true"></td>
+                <td id="x11y13" contenteditable="true"></td>
+                <td id="x12y13" contenteditable="true"></td>
+                <td id="x13y13" contenteditable="true"></td>
+                <td id="x14y13" contenteditable="true"></td>
+                <td id="x15y13" contenteditable="true"></td>
+                <td id="x16y13" class="blank-cell" contenteditable="false"></td>
+                <td id="x17y13" contenteditable="true"></td>
+            </tr>
+
+            <tr id="y14">
                 <td id="x1y14" class="blank-cell" contenteditable="false"></td>
                 <td id="x2y14" class="blank-cell" contenteditable="false"></td>
                 <td id="x3y14" class="blank-cell" contenteditable="false"></td>
                 <td id="x4y14" class="blank-cell" contenteditable="false"></td>
                 <td id="x5y14" class="blank-cell" contenteditable="false"></td>
-                <td id="x6y14" contenteditable="true" placeholder="7"></td>
-                <td id="x7y14" contenteditable="true"></td>
-                <td id="x8y14" contenteditable="true"></td>
-                <td id="x9y14" contenteditable="true"></td>
-                <td id="x10y14" contenteditable="true"></td>
-                <td id="x11y14" contenteditable="true"></td>
-                <td id="x12y14" contenteditable="true"></td>
-                <td id="x13y14" contenteditable="true"></td>
-                <td id="x14y14" contenteditable="true"></td>
-                <td id="x15y14" contenteditable="true"></td>
+                <td id="x6y14" class="blank-cell" contenteditable="false"></td>
+                <td id="x7y14" class="blank-cell" contenteditable="false"></td>
+                <td id="x8y14" class="blank-cell" contenteditable="false"></td>
+                <td id="x9y14" class="blank-cell" contenteditable="false"></td>
+                <td id="x10y14"class="blank-cell" contenteditable="false"></td>
+                <td id="x11y14" class="blank-cell" contenteditable="false"></td>
+                <td id="x12y14" class="blank-cell" contenteditable="false"></td>
+                <td id="x13y14" class="blank-cell" contenteditable="false"></td>
+                <td id="x14y14" class="blank-cell" contenteditable="false"></td>
+                <td id="x15y14" class="blank-cell" contenteditable="false"></td>
                 <td id="x16y14" class="blank-cell" contenteditable="false"></td>
                 <td id="x17y14" contenteditable="true"></td>
-            </tr>
-
-            <tr id="y14">
-                <td id="x1y15" class="blank-cell" contenteditable="false"></td>
-                <td id="x2y15" class="blank-cell" contenteditable="false"></td>
-                <td id="x3y15" class="blank-cell" contenteditable="false"></td>
-                <td id="x4y15" class="blank-cell" contenteditable="false"></td>
-                <td id="x5y15" class="blank-cell" contenteditable="false"></td>
-                <td id="x6y15" class="blank-cell" contenteditable="false"></td>
-                <td id="x7y15" class="blank-cell" contenteditable="false"></td>
-                <td id="x8y15" class="blank-cell" contenteditable="false"></td>
-                <td id="x9y15" class="blank-cell" contenteditable="false"></td>
-                <td id="x10y15"class="blank-cell" contenteditable="false"></td>
-                <td id="x11y15" class="blank-cell" contenteditable="false"></td>
-                <td id="x12y15" class="blank-cell" contenteditable="false"></td>
-                <td id="x13y15" class="blank-cell" contenteditable="false"></td>
-                <td id="x14y15" class="blank-cell" contenteditable="false"></td>
-                <td id="x15y15" class="blank-cell" contenteditable="false"></td>
-                <td id="x16y15" class="blank-cell" contenteditable="false"></td>
-                <td id="x17y15" contenteditable="true"></td>
             </tr>
 
             <tr id="y15">
@@ -338,14 +338,14 @@
                 <td id="x7y16" class="blank-cell" contenteditable="false"></td>
                 <td id="x8y16" class="blank-cell" contenteditable="false"></td>
                 <td id="x9y16" class="blank-cell" contenteditable="false"></td>
-                <td id="x10y5" class="blank-cell" contenteditable="false"></td>
-                <td id="x11y5" class="blank-cell" contenteditable="false"></td>
-                <td id="x12y5" contenteditable="true" placeholder="8"></td>
-                <td id="x13y5" contenteditable="true"></td>
-                <td id="x14y5" contenteditable="true"></td>
-                <td id="x15y5" contenteditable="true"></td>
-                <td id="x16y5" contenteditable="true"></td>
-                <td id="x17y5" contenteditable="true"></td>
+                <td id="x10y16" class="blank-cell" contenteditable="false"></td>
+                <td id="x11y16" class="blank-cell" contenteditable="false"></td>
+                <td id="x12y16" contenteditable="true" placeholder="8"></td>
+                <td id="x13y16" contenteditable="true"></td>
+                <td id="x14y16" contenteditable="true"></td>
+                <td id="x15y16" contenteditable="true"></td>
+                <td id="x16y16" contenteditable="true"></td>
+                <td id="x17y16" contenteditable="true"></td>
             </tr>
 
             <tr id="y17">
@@ -378,6 +378,12 @@
         </div>
     </div>
 
-    <button id="clearButton">Clear Board</button>
+    <div class="buttons">
+        <button id="clearButton">Clear Board</button>
+        <button id="fillButton">See Answers</button>
+    </div>
+    
+
+
 </body>
 </html>
