styling and design

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Russo+One&family=Yanone+Kaffeesatz:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">     
     <link rel="stylesheet" href="css/main.css">
     <script defer src="js/main.js"></script>
 </head>
@@ -18,11 +18,12 @@
         <h1>Crossword Puzzle</h1>
     </header>
 
-    <body>
-        <h1>Click to play!</h1>
+        <h2 class="text1">Cinema Theme Puzzle</h2>
          <a href="game.html">
             <button id="playButton">Play Game</button>
          </a>
+
+
     </body>
-    
+
     </html>
