check answer function with solved message pop-up

--- a/game.html
+++ b/game.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/main.js"></script>
 </head>
@@ -383,8 +384,8 @@
         <button id="clearButton">Clear Board</button>
         <button id="fillButton">See Answers</button>
     </div>
-    
 
+    <div id="winnerMessage" style="display: none; color: red; font-size: 24px;"></div>
 
 </body>
 </html>
