main html style

--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@
     <link rel="stylesheet" href="css/main.css">
     <script defer src="js/main.js"></script>
 </head>
-<body>
-    <header>
-        <h1>Crossword Puzzle</h1>
-    </header>
+    <body>
+        <header>
+            <h1>Crossword Puzzle</h1>
+        </header>
 
-        <h2 class="text1">Cinema Theme Puzzle</h2>
-         <a href="game.html">
-            <button id="playButton">Play Game</button>
-         </a>
-
-
+            <a href="game.html">
+                <button id="playButton">Play Game</button>
+            </a>
+     
+            <img src="imgs/emptygrid.png" alt = "puzzlepic">
     </body>
-
     </html>
+
