updated puzzle clues

--- a/game.html
+++ b/game.html
@@ -20,14 +20,14 @@
     <div class="columns">
         <div id="acrosswords">
             <h3>Across</h3>
-          1. Robert De Niro stars in this Martin Scorsese classic.<br>
-          2. Classic film starring Tim Robbins and Morgan Freeman.<br>
-          3. Classic Al Pacino film about a Cuban immigrant.<br>
-          4. Francis Ford Coppola's epic crime drama.<br>
-          5. Quentin Tarantino's two-part crime film.<br>
-          6. David Fincher's thriller about a newspaper investigation.<br>
-          7. Classic romance set in a Moroccan city during World War II.<br>
-          8. CLUE FOR DONNIE BRASCO HERE<br>
+          1. Iconic line: "You talking to me?".<br>
+          2. Fictional prison in Maine.<br>
+          3. A chainsaw, a bathtub, and cocaine.<br>
+          4. Sending a message with a horse's head.<br>
+          5. The Bride.<br>
+          6. The killer communicated with the media and law enforcement through letters and cryptograms.<br>
+          7. Morocco World War II.<br>
+          8. Character called Lefty.<br>
         </div>
 
         <table id="gameboard">
@@ -373,10 +373,10 @@
 
     <div id="downwords">
         <h3>Down</h3>
-        9. Crime film about an underground fight club.<br>
-        10. Tarantino's debut heist film involving color-coded criminals.<br>
-        11. Gangster film featuring Joe Pesci.<br>
-        12. Quentin Tarantino's heist film set in Los Angeles.<br>
+        9. First Rule.<br>
+        10. White, Orange, Blue, Brown, Pink, Blonde.<br>
+        11. Las Vegas Strip.<br>
+        12. Iconic dance scene.<br>
         </div>
     </div>
 
